##################################################
 Revision history for Log::Log4perl
##################################################
1.32 (not yet released)
   *         [RT 62674] Fixed call to deprecated form of UNIVERSAL::can (Karen
             Etheridge).

1.31 (2010/10/27)
  *     (ms) Fixed the number of skipped tests for Windows for previous fix
             of [RT 60665].

1.30 (2010/08/30)
   *    (ms) [RT 60665] HUP handlers are stacked on top of each other now,
             to make sure that multiple file appenders recreate multiple
             files and not just one (patch provided by Karen Etheridge).
   *    (ms) [RT 60197] Fixed uninitialized value warnings with
             the multiline appender and provided a test case (patch provided
             by Karen Etheridge)
   *    (ms) [rt.cpan.org #59617] Fixed system-wide threshold without appender
             thresholds. Bug reported by Dmitry Bigunyak.
   *    (ms) [rt.cpan.org #24884] Using require() instead of incomplete
             logic in L4p::Util::module_available(). local __DIE__
             handler takes care of user-defined __DIE__ handlers 
             ignoring $^S (suggested by Eric Wilhelm and others).
   *    (ms) [rt.cpan.org #60386] Fixed init_and_watch() which 
             double-bumped the caller_level and led to uninitialized 
             values in the pattern layout. Thanks to Mitja Bartsch for 
             the report.
   *    (ms) Applied patch by Karsten Silkenbäumer to add an optional
             $log_dispatch_level to create_custom_level(). Updated 
             documentation.

1.29 (2010/06/16)
   *    (ms) Added documentation on how to use Log4perl's :easy macros
             with Catalyst in Log::Log4perl::Catalyst.
   *    (ms) wrapper_register() now deals with caller_depth automatically.
             Backwards compatibility with old wrapper classes using 
             caller_depth directly is provided. Documentation has been 
             updated.