@@ -2,8 +2,11 @@
  Revision history for Log::Log4perl
 ##################################################
 1.32 (not yet released)
-   *         [RT 62674] Fixed call to deprecated form of UNIVERSAL::can (Karen
+   *    (ms) [RT 62674] Fixed call to deprecated form of UNIVERSAL::can (Karen
              Etheridge).
+   *    (ms) [RT 62896] Log::Log4perl::Appender::ScreenColoredLevels now 
+             inherits from Log::Log4perl::Appender::Screen and therefore
+             supports the utf8 flag.
 
 1.31 (2010/10/27)
   *     (ms) Fixed the number of skipped tests for Windows for previous fix
